--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - run: choco install dotnet4.0 --no-progress
+    - run: choco install dotnet4.0 dotnet4.5 dotnet-4.6.2 dotnet4.7.2 dotnetfx --no-progress
     - run: choco install windows-sdk-7.1 --no-progress --verbose
     - run: choco install graalvm --version=19.1.0 --no-progress
     - name: Build with Maven
