--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -9,13 +9,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - run: reg query HKLM\SOFTWARE\Wow6432Node\Microsoft\NET Framework Setup\NDP\v4\Client\Version
+    - run: reg query HKLM\SOFTWARE\Wow6432Node\Microsoft\NET Framework Setup\NDP\v4\Full\Version
     - run: wmic product get name
     - run: choco install sysinternals
     - run: psinfo -s
-    - run: choco install dotnetfx --no-progress --force
-    - run: choco uninstall dotnetfx --no-progress
-    - run: choco install dotnetfx --no-progress
-    - run: choco install dotnet4.0 --no-progress
     - run: choco install windows-sdk-7.1 --no-progress --verbose
     - run: choco install graalvm --version=19.1.0 --no-progress
     - name: Build with Maven
