--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.oracle.substratevm</groupId>
+                <groupId>org.graalvm.nativeimage</groupId>
                 <artifactId>native-image-maven-plugin</artifactId>
-                <version>19.2.0</version>
+                <version>19.3.0</version>
                 <executions>
                     <execution>
                         <goals>
