--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -14,6 +14,6 @@ jobs:
       env:
         JAVA_HOME: C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0
       run: |
-        gu install native-image
+        & "C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0\bin\gu" install native-image
         & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.BAT"
         mvn --batch-mode package --file pom.xml
