--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.graalvm.nativeimage</groupId>
+                <groupId>com.github.ArloL</groupId>
                 <artifactId>native-image-maven-plugin</artifactId>
-                <version>19.3.0</version>
+                <version>master-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <goals>
