use pluginRepository instead of repository

--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,12 @@
         </dependency>
     </dependencies>
 
-    <repositories>
-        <repository>
+    <pluginRepositories>
+        <pluginRepository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
+        </pluginRepository>
+    </pluginRepositories>
 
     <build>
         <plugins>
