--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Build with Maven
       env:
         JAVA_HOME: C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0
-        MAVEN_OPTS: --add-exports=jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED
+        MAVEN_OPTS: --add-exports=jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED --add-exports=jdk.internal.vm.compiler/org.graalvm.compiler.options=ALL-UNNAMED
       run: |
         & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.BAT"
-        ./mvnw -X --batch-mode package --file pom.xml
+        .\mvnw -X --batch-mode package --file pom.xml
