--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -16,7 +16,4 @@ jobs:
         JAVA_HOME: C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0
         MAVEN_OPTS: --add-exports=jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED --add-exports=jdk.internal.vm.compiler/org.graalvm.compiler.options=ALL-UNNAMED
       run: |
-        del /s %JAVA_HOME%\bin\native-image.cmd
-        del /s %JAVA_HOME%\bin\native-image.exe
-        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.BAT"
-        .\mvnw -X --batch-mode package --file pom.xml
+        del /s %JAVA_HOME%\bin\native-image.cmd & del /s %JAVA_HOME%\bin\native-image.exe & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.BAT" & .\mvnw -X --batch-mode package --file pom.xml
