Build on macos and ubuntu

--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -3,17 +3,25 @@ name: GraalVM CI
 on: [push]
 
 jobs:
-  build:
-
-    runs-on: windows-latest
-
+  macos:
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v1
-    - run: choco install graalvm --version=19.3.0 --no-progress
     - name: Build with Maven
-      shell: cmd
-      env:
-        JAVA_HOME: C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0
-        MAVEN_OPTS: --add-exports=jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED --add-exports=jdk.internal.vm.compiler/org.graalvm.compiler.options=ALL-UNNAMED
       run: |
-        del /s "C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0\bin\native-image.cmd" & del /s "C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0\bin\native-image.exe" & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.BAT" & .\mvnw -X --batch-mode package --file pom.xml
+        wget -q https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-19.3.0/graalvm-ce-java11-darwin-amd64-19.3.0.tar.gz
+        tar xzf graalvm-ce-java11-darwin-amd64-19.3.0.tar.gz
+        export JAVA_HOME="$(pwd)/graalvm-ce-java11-19.3.0/Contents/Home/"
+        ${JAVA_HOME}/bin/gu install native-image
+        ./mvnw --batch-mode package
+  ubuntu:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Build with Maven
+      run: |
+        wget -q https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-19.3.0/graalvm-ce-java11-linux-amd64-19.3.0.tar.gz
+        tar xzf graalvm-ce-java11-linux-amd64-19.3.0.tar.gz
+        export JAVA_HOME="$(pwd)/graalvm-ce-java11-19.3.0"
+        ${JAVA_HOME}/bin/gu install native-image
+        ./mvnw --batch-mode package
