--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,6 @@
         </dependency>
     </dependencies>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </pluginRepository>
-    </pluginRepositories>
-
     <build>
         <plugins>
             <plugin>
@@ -51,9 +44,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.github.ArloL</groupId>
+                <groupId>org.graalvm.nativeimage</groupId>
                 <artifactId>native-image-maven-plugin</artifactId>
-                <version>master-SNAPSHOT</version>
+                <version>19.3.0</version>
                 <executions>
                     <execution>
                         <goals>
