--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -25,3 +25,18 @@ jobs:
         export JAVA_HOME="$(pwd)/graalvm-ce-java11-19.3.0"
         ${JAVA_HOME}/bin/gu install native-image
         ./mvnw --batch-mode package
+  windows:
+    runs-on: windows-latest
+    steps:
+    - run: choco install graalvm --version=19.3.0 --no-progress
+    - name: Build native-image.exe
+      shell: cmd
+      working-directory: C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0
+      run: |
+        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.BAT" & .\bin\native-image.cmd -jar lib\graalvm\svm-driver.jar "-H:Path=C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0\bin"
+    - name: Build with Maven
+      shell: cmd
+      env:
+        JAVA_HOME: C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0
+      run: |
+        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.BAT" & .\mvnw -X --batch-mode package --file pom.xml
