--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -33,6 +33,7 @@ jobs:
       shell: cmd
       working-directory: C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0
       run: |
+        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.BAT" -help
         "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.BAT" & .\bin\native-image.cmd -jar lib\graalvm\svm-driver.jar "-H:Path=C:\Program Files\GraalVM\graalvm-ce-java11-19.3.0\bin"
     - name: Build with Maven
       shell: cmd
