--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -4,6 +4,8 @@ on: [push]
 jobs:
   macos:
     runs-on: macos-latest
+    env:
+      PLATFORM: macos
     steps:
     - uses: actions/checkout@v1
     - name: Build with Maven
@@ -15,6 +17,8 @@ jobs:
         ./mvnw --batch-mode package
   ubuntu:
     runs-on: ubuntu-latest
+    env:
+      PLATFORM: linux
     steps:
     - uses: actions/checkout@v1
     - name: Build with Maven
@@ -28,6 +32,7 @@ jobs:
     runs-on: windows-latest
     env:
       VCVARS_BAT: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat
+      PLATFORM: windows
     steps:
     - uses: actions/checkout@v1
     - run: choco install graalvm --version=19.3.0 --no-progress
