--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -1,3 +1,6 @@
 {
-    "resources": []
+  "resources":[
+    {"pattern":"org/eclipse/jgit/internal/JGitText.properties"}, 
+    {"pattern":"org/slf4j/impl/StaticLoggerBinder.class"}
+  ]
 }
