--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -41,7 +41,7 @@ jobs:
       working-directory: C:\Program Files\GraalVM\graalvm-ce-java11-20.0.0
       run: |
         call "%VCVARS_BAT%"
-        "%JAVA_HOME%"/bin/gu install native-image
+        call .\bin\gu install native-image
     - name: Build with Maven
       shell: cmd
       env:
