Try moving native-image.exe

--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -42,6 +42,7 @@ jobs:
       run: |
         call "%VCVARS_BAT%"
         call .\bin\gu install native-image
+        move native-image.exe .\bin
     - name: Build with Maven
       shell: cmd
       env:
