--- a/pom.xml
+++ b/pom.xml
@@ -75,9 +75,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.graalvm.nativeimage</groupId>
+                <groupId>com.github.ArloL</groupId>
                 <artifactId>native-image-maven-plugin</artifactId>
-                <version>20.0.0</version>
+                <version>482856dfa2</version>
                 <executions>
                     <execution>
                         <goals>
@@ -89,5 +89,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
