--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,9 @@
                         <phase>package</phase>
                     </execution>
                 </executions>
+                <configuration>
+					<imageName>${project.artifactId}-${platform}-${project.version}</imageName>
+				</configuration>
             </plugin>
         </plugins>
     </build>
