Use upx to compress macos artifact

--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -18,7 +18,9 @@ jobs:
         tar xzf graalvm-ce-java11-darwin-amd64-20.0.0.tar.gz
         export JAVA_HOME="$(pwd)/graalvm-ce-java11-20.0.0/Contents/Home/"
         ${JAVA_HOME}/bin/gu install native-image
+        brew install upx
         ./mvnw --batch-mode package
+        upx --brute target/newlinechecker-mac-*
         mkdir target/artifacts
         cp target/newlinechecker-* target/artifacts
     - uses: actions/upload-artifact@v1
