Use official graalvm image

--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,9 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>com.github.ArloL</groupId>
+                        <groupId>org.graalvm.nativeimage</groupId>
                         <artifactId>native-image-maven-plugin</artifactId>
-                        <version>482856dfa2</version>
+                        <version>20.2.0</version>
                         <executions>
                             <execution>
                                 <goals>
