--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '11'
     - name: Cache Maven packages
       uses: actions/cache@v1
       with:
@@ -34,6 +37,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '11'
     - name: Cache Maven packages
       uses: actions/cache@v1
       with:
@@ -61,6 +67,9 @@ jobs:
       VCVARS_BAT: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '11'
     - run: choco install graalvm --version=20.2.0 --no-progress
     - run: choco install upx --version=3.96 --no-progress
     - name: Cache Maven packages
