--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -1,6 +1,8 @@
 {
   "resources":[
+    {"pattern":"\\Qorg/slf4j/impl/StaticLoggerBinder.class\\E"}, 
     {"pattern":"org/eclipse/jgit/internal/JGitText.properties"}, 
     {"pattern":"org/slf4j/impl/StaticLoggerBinder.class"}
-  ]
+  ],
+  "bundles":[]
 }
