Run executable during build

--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -30,7 +30,9 @@ jobs:
           -Dsha1="${GITHUB_SHA}" \
           -Drevision="${GITHUB_SHA}" \
           package
+        ./target/newlinechecker-mac-*
         upx --brute target/newlinechecker-mac-*
+        ./target/newlinechecker-mac-*
         mkdir target/artifacts
         cp target/newlinechecker-* target/artifacts
     - uses: actions/upload-artifact@v1
@@ -62,7 +64,9 @@ jobs:
           -Dsha1="${GITHUB_SHA}" \
           -Drevision="${GITHUB_SHA}" \
           package
+        ./target/newlinechecker-linux-*
         upx --brute target/newlinechecker-linux-*
+        ./target/newlinechecker-linux-*
         mkdir target/artifacts
         cp target/newlinechecker-* target/artifacts
     - uses: actions/upload-artifact@v1
