Add org.eclipse.jgit.internal.JGitText resource bundle

--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -4,5 +4,7 @@
     {"pattern":"org/eclipse/jgit/internal/JGitText.properties"}, 
     {"pattern":"org/slf4j/impl/StaticLoggerBinder.class"}
   ],
-  "bundles":[]
+  "bundles":[
+    {"name":"org.eclipse.jgit.internal.JGitText"}
+  ]
 }
